unpackaged/main/default/objects/Opportunity_Offer__c/fields/Dulux_Acratex_Details__c.field-meta.xml
<CustomField>
    <fullName>Dulux_Acratex_Details__c</fullName>
    <label>Dulux Acratex Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Render Texture &amp; Membrane Top Coat</fullName>
            </value>
            <value>
                <fullName>Render Texture Only</fullName>
            </value>
            <value>
                <fullName>Fibre Cement Expressed Joint</fullName>
            </value>
            <value>
                <fullName>Fibre Cement Recessed Joint</fullName>
            </value>
            <value>
                <fullName>Hebel 50mm Panel</fullName>
            </value>
            <value>
                <fullName>Hebel 75mm Panel</fullName>
            </value>
            <value>
                <fullName>Loxo 75mm Panel</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Yes - Fibre Cement Expressed Joint</fullName>
                <isActive>false</isActive>
                <label>Yes - Fibre Cement Expressed Joint</label>
            </value>
            <value>
                <fullName>Yes - Fibre Cement Recessed Joint</fullName>
                <isActive>false</isActive>
                <label>Yes - Fibre Cement Recessed Joint</label>
            </value>
            <value>
                <fullName>Yes - Hebel 50mm Panel</fullName>
                <isActive>false</isActive>
                <label>Yes - Hebel 50mm Panel</label>
            </value>
            <value>
                <fullName>Yes - Hebel 75mm Panel</fullName>
                <isActive>false</isActive>
                <label>Yes - Hebel 75mm Panel</label>
            </value>
            <value>
                <fullName>Yes - Loxo 75mm Panel</fullName>
                <isActive>false</isActive>
                <label>Yes - Loxo 75mm Panel</label>
            </value>
            <value>
                <fullName>Yes - Render Texture &amp; Membrane Top Coat</fullName>
                <isActive>false</isActive>
                <label>Yes - Render Texture &amp; Membrane Top Coat</label>
            </value>
            <value>
                <fullName>Yes - Render Texture Only</fullName>
                <isActive>false</isActive>
                <label>Yes - Render Texture Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>