unpackaged/main/default/objects/Opportunity_Offer__c/fields/Eaves_Soffits__c.field-meta.xml
<CustomField>
    <fullName>Eaves_Soffits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eaves &amp; Soffits</label>
    <type>Checkbox</type>
</CustomField>