unpackaged/main/default/objects/Opportunity_Offer__c/fields/Efficiency_of_Gas_Furnace__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_of_Gas_Furnace__c</fullName>
    <label>Efficiency of Gas Furnace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Star</fullName>
            </value>
            <value>
                <fullName>4 Star</fullName>
            </value>
            <value>
                <fullName>5 Star</fullName>
            </value>
            <value>
                <fullName>6 Star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>