unpackaged/main/default/objects/Opportunity_Offer__c/fields/Elevations__c.field-meta.xml
<CustomField>
    <fullName>Elevations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elevations</label>
    <type>Checkbox</type>
</CustomField>