unpackaged/main/default/objects/Opportunity_Offer__c/fields/Energy_Report__c.field-meta.xml
<CustomField>
    <fullName>Energy_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Energy Report</label>
    <type>Checkbox</type>
</CustomField>