unpackaged/main/default/objects/Opportunity_Offer__c/fields/Engineering_Plan__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineering Plan</label>
    <type>Checkbox</type>
</CustomField>