unpackaged/main/default/objects/Opportunity_Offer__c/fields/Exposed_Roof_tops__c.field-meta.xml
<CustomField>
    <fullName>Exposed_Roof_tops__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exposed Roof tops</label>
    <type>Checkbox</type>
</CustomField>