unpackaged/main/default/objects/Opportunity_Offer__c/fields/External_Ceilings_Notes__c.field-meta.xml
<CustomField>
    <fullName>External_Ceilings_Notes__c</fullName>
    <label>External Ceilings Notes</label>
    <type>TextArea</type>
</CustomField>