unpackaged/main/default/objects/Opportunity_Offer__c/fields/External_Wall_Insulation__c.field-meta.xml
<CustomField>
    <fullName>External_Wall_Insulation__c</fullName>
    <label>External Wall Insulation</label>
    <type>TextArea</type>
</CustomField>