unpackaged/main/default/objects/Opportunity_Offer__c/fields/External_Wall_Insulation_CB__c.field-meta.xml
<CustomField>
    <fullName>External_Wall_Insulation_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Wall Insulation</label>
    <type>Checkbox</type>
</CustomField>