unpackaged/main/default/objects/Opportunity_Offer__c/fields/Facades__c.field-meta.xml
<CustomField>
    <fullName>Facades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facades</label>
    <type>Checkbox</type>
</CustomField>