unpackaged/main/default/objects/Opportunity_Offer__c/fields/Factories_Workshops__c.field-meta.xml
<CustomField>
    <fullName>Factories_Workshops__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factories / Workshops</label>
    <type>Checkbox</type>
</CustomField>