unpackaged/main/default/objects/Opportunity_Offer__c/fields/Finishes_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Finishes_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finishes Schedule</label>
    <type>Checkbox</type>
</CustomField>