unpackaged/main/default/objects/Opportunity_Offer__c/fields/Finishing_H_Ware_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Finishing_H_Ware_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finishing &amp; H/Ware Schedule</label>
    <type>Checkbox</type>
</CustomField>