unpackaged/main/default/objects/Opportunity_Offer__c/fields/Fire_Engineers_Report__c.field-meta.xml
<CustomField>
    <fullName>Fire_Engineers_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire &amp; Engineers Report</label>
    <type>Checkbox</type>
</CustomField>