unpackaged/main/default/objects/Opportunity_Offer__c/fields/Fire_Tanks__c.field-meta.xml
<CustomField>
    <fullName>Fire_Tanks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Tanks</label>
    <type>Checkbox</type>
</CustomField>