unpackaged/main/default/objects/Opportunity_Offer__c/fields/Floor_Plans__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Plans</label>
    <type>Checkbox</type>
</CustomField>