unpackaged/main/default/objects/Opportunity_Offer__c/fields/Flooring_Direction__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Direction__c</fullName>
    <label>Flooring Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Marked on plan attached</fullName>
            </value>
            <value>
                <fullName>No - Unsure of direction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>