unpackaged/main/default/objects/Opportunity_Offer__c/fields/Flooring_on_MDF_tread__c.field-meta.xml
<CustomField>
    <fullName>Flooring_on_MDF_tread__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flooring on MDF tread</label>
    <type>Checkbox</type>
</CustomField>