unpackaged/main/default/objects/Opportunity_Offer__c/fields/Flooring_Type__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Type__c</fullName>
    <label>Flooring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineered Oak - 14.3mm</fullName>
            </value>
            <value>
                <fullName>Hybrid Flooring - 6mm</fullName>
            </value>
            <value>
                <fullName>Oslek (Only available in Vic)</fullName>
            </value>
            <value>
                <fullName>TopDeck (Only available in NSW)</fullName>
            </value>
            <value>
                <fullName>Laminate Flooring</fullName>
            </value>
            <value>
                <fullName>QLD Only - WPC Vinyl Flooring</fullName>
            </value>
            <value>
                <fullName>QLD Only - LVT Vinyl Flooring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>