unpackaged/main/default/objects/Opportunity_Offer__c/fields/Flydoor_Options__c.field-meta.xml
<CustomField>
    <fullName>Flydoor_Options__c</fullName>
    <label>Flydoor - Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Barrier</fullName>
            </value>
            <value>
                <fullName>Security doors</fullName>
            </value>
            <value>
                <fullName>STD flydoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>