unpackaged/main/default/objects/Opportunity_Offer__c/fields/Flydoors__c.field-meta.xml
<CustomField>
    <fullName>Flydoors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flydoors</label>
    <type>Checkbox</type>
</CustomField>