unpackaged/main/default/objects/Opportunity_Offer__c/fields/Flyscreens__c.field-meta.xml
<CustomField>
    <fullName>Flyscreens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flyscreens</label>
    <type>Checkbox</type>
</CustomField>