unpackaged/main/default/objects/Opportunity_Offer__c/fields/Frameless_10mm_Fixed_Panels__c.field-meta.xml
<CustomField>
    <fullName>Frameless_10mm_Fixed_Panels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frameless 10mm Fixed Panels</label>
    <type>Checkbox</type>
</CustomField>