unpackaged/main/default/objects/Opportunity_Offer__c/fields/Frameless_10mm_Hinged_Door__c.field-meta.xml
<CustomField>
    <fullName>Frameless_10mm_Hinged_Door__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frameless 10mm Hinged Door</label>
    <type>Checkbox</type>
</CustomField>