unpackaged/main/default/objects/Opportunity_Offer__c/fields/Frameless_Hardware_Colour__c.field-meta.xml
<CustomField>
    <fullName>Frameless_Hardware_Colour__c</fullName>
    <label>Frameless Hardware Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polished Silver</fullName>
            </value>
            <value>
                <fullName>Brushed Brass</fullName>
            </value>
            <value>
                <fullName>Gunmetal</fullName>
            </value>
            <value>
                <fullName>Matte Black</fullName>
            </value>
            <value>
                <fullName>Brushed Nickel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>