unpackaged/main/default/objects/Opportunity_Offer__c/fields/Framework_Studwork__c.field-meta.xml
<CustomField>
    <fullName>Framework_Studwork__c</fullName>
    <label>Framework/Studwork</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timber</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>