unpackaged/main/default/objects/Opportunity_Offer__c/fields/Front_2_Sides__c.field-meta.xml
<CustomField>
    <fullName>Front_2_Sides__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front &amp; 2 Sides</label>
    <type>Checkbox</type>
</CustomField>