unpackaged/main/default/objects/Opportunity_Offer__c/fields/Front__c.field-meta.xml
<CustomField>
    <fullName>Front__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front</label>
    <type>Checkbox</type>
</CustomField>