unpackaged/main/default/objects/Opportunity_Offer__c/fields/Front_Hob__c.field-meta.xml
<CustomField>
    <fullName>Front_Hob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front &amp; Hob</label>
    <type>Checkbox</type>
</CustomField>