unpackaged/main/default/objects/Opportunity_Offer__c/fields/Front_Return__c.field-meta.xml
<CustomField>
    <fullName>Front_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front &amp; Return</label>
    <type>Checkbox</type>
</CustomField>