unpackaged/main/default/objects/Opportunity_Offer__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NG</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>