unpackaged/main/default/objects/Opportunity_Offer__c/fields/Full_Height_Tiling__c.field-meta.xml
<CustomField>
    <fullName>Full_Height_Tiling__c</fullName>
    <label>Full Height Tiling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Height Tiling</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>