unpackaged/main/default/objects/Opportunity_Offer__c/fields/Garage_Ceiling_Spec__c.field-meta.xml
<CustomField>
    <fullName>Garage_Ceiling_Spec__c</fullName>
    <label>Garage Ceiling Spec</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Garage_Ceilings__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>450mm Gyprock Only</fullName>
            </value>
            <value>
                <fullName>Supaceil 10mm</fullName>
            </value>
            <value>
                <fullName>Not Plastered</fullName>
            </value>
            <value>
                <fullName>Battens Required</fullName>
            </value>
            <value>
                <fullName>Direct Fix to Truss</fullName>
            </value>
            <value>
                <fullName>Laser Levelled on Clips</fullName>
            </value>
            <value>
                <fullName>Cornice by CSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>