unpackaged/main/default/objects/Opportunity_Offer__c/fields/Garage_Ceiling_Type__c.field-meta.xml
<CustomField>
    <fullName>Garage_Ceiling_Type__c</fullName>
    <label>Garage Ceiling Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>