unpackaged/main/default/objects/Opportunity_Offer__c/fields/Garage_Ceilings__c.field-meta.xml
<CustomField>
    <fullName>Garage_Ceilings__c</fullName>
    <label>Garage Ceilings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>450 Centres</fullName>
            </value>
            <value>
                <fullName>600 Centres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>