unpackaged/main/default/objects/Opportunity_Offer__c/fields/Garage_Door_Type__c.field-meta.xml
<CustomField>
    <fullName>Garage_Door_Type__c</fullName>
    <label>Garage Door Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>