unpackaged/main/default/objects/Opportunity_Offer__c/fields/Garage_Walls__c.field-meta.xml
<CustomField>
    <fullName>Garage_Walls__c</fullName>
    <label>Garage Walls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gyprock Plus 10mm</fullName>
            </value>
            <value>
                <fullName>Not Plastered</fullName>
            </value>
            <value>
                <fullName>As Per Plan</fullName>
            </value>
            <value>
                <fullName>Other - Please Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>