unpackaged/main/default/objects/Opportunity_Offer__c/fields/Garage_Walls_Other__c.field-meta.xml
<CustomField>
    <fullName>Garage_Walls_Other__c</fullName>
    <label>Garage Walls - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>