unpackaged/main/default/objects/Opportunity_Offer__c/fields/Garages__c.field-meta.xml
<CustomField>
    <fullName>Garages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garages</label>
    <type>Checkbox</type>
</CustomField>