unpackaged/main/default/objects/Opportunity_Offer__c/fields/General_description_of_works__c.field-meta.xml
<CustomField>
    <fullName>General_description_of_works__c</fullName>
    <label>General description of works</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>