unpackaged/main/default/objects/Opportunity_Offer__c/fields/General_Service__c.field-meta.xml
<CustomField>
    <fullName>General_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Service</label>
    <type>Checkbox</type>
</CustomField>