unpackaged/main/default/objects/Opportunity_Offer__c/fields/Green_Roofs_Vertical_Gardens__c.field-meta.xml
<CustomField>
    <fullName>Green_Roofs_Vertical_Gardens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Green Roofs / Vertical Gardens</label>
    <type>Checkbox</type>
</CustomField>