unpackaged/main/default/objects/Opportunity_Offer__c/fields/Handrail__c.field-meta.xml
<CustomField>
    <fullName>Handrail__c</fullName>
    <label>Handrail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pine</fullName>
            </value>
            <value>
                <fullName>Flooded Gum</fullName>
            </value>
            <value>
                <fullName>European Beech</fullName>
            </value>
            <value>
                <fullName>Stainless Steel</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>