unpackaged/main/default/objects/Opportunity_Offer__c/fields/Hardies_ZeroLot_Wall_Systems__c.field-meta.xml
<CustomField>
    <fullName>Hardies_ZeroLot_Wall_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardies ZeroLot Wall Systems</label>
    <type>Checkbox</type>
</CustomField>