unpackaged/main/default/objects/Opportunity_Offer__c/fields/Hardware_Colour_Balustrading__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Colour_Balustrading__c</fullName>
    <label>Hardware Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stainless Steel</fullName>
            </value>
            <value>
                <fullName>Brushed Stainless Steel</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>