unpackaged/main/default/objects/Opportunity_Offer__c/fields/Hardware_Colour_Other__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Colour_Other__c</fullName>
    <label>Hardware Colour - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>