unpackaged/main/default/objects/Opportunity_Offer__c/fields/House_Plans__c.field-meta.xml
<CustomField>
    <fullName>House_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>House Plans</label>
    <type>Checkbox</type>
</CustomField>