unpackaged/main/default/objects/Opportunity_Offer__c/fields/Industrial_Kitchens__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Kitchens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industrial Kitchens</label>
    <type>Checkbox</type>
</CustomField>