unpackaged/main/default/objects/Opportunity_Offer__c/fields/Install_Method__c.field-meta.xml
<CustomField>
    <fullName>Install_Method__c</fullName>
    <label>Install Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floating</fullName>
            </value>
            <value>
                <fullName>Direct Stick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>