unpackaged/main/default/objects/Opportunity_Offer__c/fields/Internal_Ceilings__c.field-meta.xml
<CustomField>
    <fullName>Internal_Ceilings__c</fullName>
    <label>Internal Ceilings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>450mm Centres</fullName>
            </value>
            <value>
                <fullName>600mm Centres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>