unpackaged/main/default/objects/Opportunity_Offer__c/fields/Internal_Ceilings_Detail__c.field-meta.xml
<CustomField>
    <fullName>Internal_Ceilings_Detail__c</fullName>
    <label>Internal Ceilings Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laser Levelled on Clips</fullName>
            </value>
            <value>
                <fullName>Direct Fit to Truss</fullName>
            </value>
            <value>
                <fullName>Other - Please Specify</fullName>
            </value>
            <value>
                <fullName>Battens Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>