unpackaged/main/default/objects/Opportunity_Offer__c/fields/Internal_Ceilings_Detail_Other__c.field-meta.xml
<CustomField>
    <fullName>Internal_Ceilings_Detail_Other__c</fullName>
    <label>Internal Ceilings Detail - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>