unpackaged/main/default/objects/Opportunity_Offer__c/fields/Internal_Heights__c.field-meta.xml
<CustomField>
    <fullName>Internal_Heights__c</fullName>
    <label>Internal Heights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1700</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>