unpackaged/main/default/objects/Opportunity_Offer__c/fields/Internal_Heights_Other__c.field-meta.xml
<CustomField>
    <fullName>Internal_Heights_Other__c</fullName>
    <label>Internal Heights - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>