unpackaged/main/default/objects/Opportunity_Offer__c/fields/Internal_Walls__c.field-meta.xml
<CustomField>
    <fullName>Internal_Walls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Walls</label>
    <type>Checkbox</type>
</CustomField>