unpackaged/main/default/objects/Opportunity_Offer__c/fields/Kennels__c.field-meta.xml
<CustomField>
    <fullName>Kennels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kennels</label>
    <type>Checkbox</type>
</CustomField>