unpackaged/main/default/objects/Opportunity_Offer__c/fields/Levels__c.field-meta.xml
<CustomField>
    <fullName>Levels__c</fullName>
    <inlineHelpText>No More Than 6 Levels</inlineHelpText>
    <label>Level No. Elevator Requires To Stop At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>