unpackaged/main/default/objects/Opportunity_Offer__c/fields/Lift_Pits__c.field-meta.xml
<CustomField>
    <fullName>Lift_Pits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lift Pits</label>
    <type>Checkbox</type>
</CustomField>