unpackaged/main/default/objects/Opportunity_Offer__c/fields/Material_Selected__c.field-meta.xml
<CustomField>
    <fullName>Material_Selected__c</fullName>
    <label>Material Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>Solar Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>