unpackaged/main/default/objects/Opportunity_Offer__c/fields/Motor_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Motor_Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor Upgrade</label>
    <type>Checkbox</type>
</CustomField>