unpackaged/main/default/objects/Opportunity_Offer__c/fields/Mount_Type__c.field-meta.xml
<CustomField>
    <fullName>Mount_Type__c</fullName>
    <label>Mount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spigots (Pools, Stairs, Balcony)</fullName>
            </value>
            <value>
                <fullName>Standoff (Stairs Only)</fullName>
            </value>
            <value>
                <fullName>Channel Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>