unpackaged/main/default/objects/Opportunity_Offer__c/fields/No_of_Levels_of_Cladding_Partiwalls__c.field-meta.xml
<CustomField>
    <fullName>No_of_Levels_of_Cladding_Partiwalls__c</fullName>
    <label>No. of Levels of Cladding Partiwalls</label>
    <length>20</length>
    <type>Text</type>
</CustomField>