unpackaged/main/default/objects/Opportunity_Offer__c/fields/Number_of_EAC_outlets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_EAC_outlets__c</fullName>
    <label>Number of EAC outlets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>