unpackaged/main/default/objects/Opportunity_Offer__c/fields/Number_of_Levels_Combination__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Levels_Combination__c</fullName>
    <label>Number of Levels Combination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>