unpackaged/main/default/objects/Opportunity_Offer__c/fields/Opening_heights__c.field-meta.xml
<CustomField>
    <fullName>Opening_heights__c</fullName>
    <label>Opening heights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2100</fullName>
            </value>
            <value>
                <fullName>2400</fullName>
            </value>
            <value>
                <fullName>2700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>