unpackaged/main/default/objects/Opportunity_Offer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Offers</relationshipLabel>
    <relationshipName>Opportunity_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>