unpackaged/main/default/objects/Opportunity_Offer__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Used to enforce 1-1 relationship between Opportuinty and Opportunity Offers. (ex. 1 Plasterboard &amp; Insulation Opp = 1 Plasterboard &amp; Insulation Opp Offer)</description>
    <label>Opportunity ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>