unpackaged/main/default/objects/Opportunity_Offer__c/fields/Optima_High_Wall_Split__c.field-meta.xml
<CustomField>
    <fullName>Optima_High_Wall_Split__c</fullName>
    <label>Optima High Wall Split</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.5kW</fullName>
            </value>
            <value>
                <fullName>3.5kW</fullName>
            </value>
            <value>
                <fullName>5.0kW</fullName>
            </value>
            <value>
                <fullName>7.0kW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>