unpackaged/main/default/objects/Opportunity_Offer__c/fields/Other_Cornice_Type_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Cornice_Type_Location__c</fullName>
    <label>Other Cornice Type Location</label>
    <type>TextArea</type>
</CustomField>