unpackaged/main/default/objects/Opportunity_Offer__c/fields/Panel_size__c.field-meta.xml
<CustomField>
    <fullName>Panel_size__c</fullName>
    <label>Panel size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50mm</fullName>
            </value>
            <value>
                <fullName>75mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>