unpackaged/main/default/objects/Opportunity_Offer__c/fields/Partiwalls__c.field-meta.xml
<CustomField>
    <fullName>Partiwalls__c</fullName>
    <label>Partiwalls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shaftliner Setup</fullName>
            </value>
            <value>
                <fullName>BRC or BGC. Comments below</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>