unpackaged/main/default/objects/Opportunity_Offer__c/fields/Partiwalls_Comment__c.field-meta.xml
<CustomField>
    <fullName>Partiwalls_Comment__c</fullName>
    <label>Partiwalls Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>