unpackaged/main/default/objects/Opportunity_Offer__c/fields/Patios_Alfresco_Areas__c.field-meta.xml
<CustomField>
    <fullName>Patios_Alfresco_Areas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patios / Alfresco Areas</label>
    <type>Checkbox</type>
</CustomField>