unpackaged/main/default/objects/Opportunity_Offer__c/fields/Plain_text_field__c.field-meta.xml
<CustomField>
    <fullName>Plain_text_field__c</fullName>
    <label>Plain text field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>